<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamDetaisActivity"
    tools:ignore="RtlHardcoded" >


     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/margin8"
         android:id="@+id/clubImage"
         android:src="@drawable/placeholder"
         tools:ignore="ContentDescription"
          />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textStyle="bold"
        android:id="@+id/teamName"
        app:layout_constraintTop_toBottomOf="@+id/clubImage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/clubImage"
        app:layout_constraintLeft_toRightOf="@+id/teamName"
        android:id="@+id/teamNameTv"
        android:layout_marginLeft="@dimen/margin8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_name"
        android:textStyle="bold"
        android:id="@+id/shortName"
        app:layout_constraintTop_toBottomOf="@+id/teamNameTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/teamNameTv"
        app:layout_constraintLeft_toRightOf="@+id/shortName"
        android:id="@+id/shortNameTv"
        android:layout_marginLeft="@dimen/margin8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tla"
        android:textStyle="bold"
        android:id="@+id/tla"
        app:layout_constraintTop_toBottomOf="@+id/shortNameTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/shortNameTv"
        app:layout_constraintLeft_toRightOf="@+id/tla"
        android:id="@+id/tlaTv"
        android:layout_marginLeft="@dimen/margin8"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addreess"
        android:textStyle="bold"
        android:id="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/tlaTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/tlaTv"
        app:layout_constraintLeft_toRightOf="@+id/address"
        android:id="@+id/addressTv"
        android:layout_marginLeft="@dimen/margin8"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textStyle="bold"
        android:id="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/addressTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/addressTv"
        app:layout_constraintLeft_toRightOf="@+id/phone"
        android:id="@+id/phoneTv"
        android:layout_marginLeft="@dimen/margin8"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_website"
        android:textStyle="bold"
        android:id="@+id/teamWebsite"
        app:layout_constraintTop_toBottomOf="@+id/phoneTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/phoneTv"
        app:layout_constraintLeft_toRightOf="@+id/teamWebsite"
        android:id="@+id/teamWebsiteTv"
        android:textStyle="italic"
        android:textColor="@color/websiteColor"
        android:layout_marginLeft="@dimen/margin8"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:id="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/teamWebsiteTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/teamWebsiteTv"
        app:layout_constraintLeft_toRightOf="@+id/email"
        android:id="@+id/emailTv"
        android:layout_marginLeft="@dimen/margin8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/founded"
        android:textStyle="bold"
        android:id="@+id/founded"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/emailTv"
        app:layout_constraintLeft_toRightOf="@+id/founded"
        android:id="@+id/foundedTv"
        android:layout_marginLeft="@dimen/margin8"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/club_colors"
        android:textStyle="bold"
        android:id="@+id/clubColor"
        app:layout_constraintTop_toBottomOf="@+id/foundedTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/foundedTv"
        app:layout_constraintLeft_toRightOf="@+id/clubColor"
        android:id="@+id/clubColorTv"
        android:layout_marginLeft="@dimen/margin8"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/club_venue"
        android:textStyle="bold"
        android:id="@+id/teamVenue"
        app:layout_constraintTop_toBottomOf="@+id/clubColorTv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintTop_toBottomOf="@+id/clubColorTv"
        app:layout_constraintLeft_toRightOf="@+id/teamVenue"
        android:id="@+id/teamVenueTv"
        android:layout_marginLeft="@dimen/margin8"
        />




</android.support.constraint.ConstraintLayout>