<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin4"
    android:layout_marginBottom="@dimen/margin4"
    app:cardCornerRadius="@dimen/card20"
    android:id="@+id/teamCard"
    >
   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginRight="@dimen/margin8"
       android:layout_marginLeft="@dimen/margin8">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/team_name"
           android:textStyle="bold"
           android:id="@+id/teamName"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="@dimen/margin4"
           android:layout_marginLeft="@dimen/margin8"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin4"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toRightOf="@+id/teamName"
           android:id="@+id/teamNameTv"/>

       <ImageView
           android:layout_width="@dimen/small_image"
           android:layout_height="@dimen/small_image"
           android:layout_marginTop="@dimen/margin8"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginRight="@dimen/margin16"
           android:src="@drawable/blank_fav"
           android:id="@+id/favImg"
           android:tag="empty"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/team_website"
           android:textStyle="bold"
           android:id="@+id/teamWebsite"
           app:layout_constraintTop_toBottomOf="@+id/teamName"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="@dimen/margin4"
           android:layout_marginLeft="@dimen/margin8"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin4"
           app:layout_constraintTop_toBottomOf="@+id/teamNameTv"
           app:layout_constraintLeft_toRightOf="@+id/teamWebsite"
           android:id="@+id/teamWebsiteTv"
           android:textStyle="italic"
           android:textColor="@color/websiteColor"/>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/club_colors"
           android:textStyle="bold"
           android:id="@+id/clubColor"
           app:layout_constraintTop_toBottomOf="@+id/teamWebsite"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="@dimen/margin4"
           android:layout_marginLeft="@dimen/margin8"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin4"
           app:layout_constraintTop_toBottomOf="@+id/teamWebsiteTv"
           app:layout_constraintLeft_toRightOf="@+id/clubColor"
           android:id="@+id/clubColorTv"
          />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/club_venue"
           android:textStyle="bold"
           android:id="@+id/teamVenue"
           app:layout_constraintTop_toBottomOf="@+id/clubColorTv"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="@dimen/margin4"
           android:layout_marginLeft="@dimen/margin8"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin4"
           app:layout_constraintTop_toBottomOf="@+id/clubColorTv"
           app:layout_constraintLeft_toRightOf="@+id/teamVenue"
           android:id="@+id/teamVenueTv"
           />


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/players_name"
           android:textStyle="bold"
           android:id="@+id/playerName"
           app:layout_constraintTop_toBottomOf="@+id/teamVenue"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="@dimen/margin4"
           android:layout_marginLeft="@dimen/margin8"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin4"
           app:layout_constraintTop_toBottomOf="@+id/teamVenueTv"
           app:layout_constraintLeft_toRightOf="@+id/playerName"
           android:id="@+id/playerNameTv"
           android:text="@string/show_more"
           android:textStyle="bold"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/playerName"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:id="@+id/namesTv"
           android:layout_marginTop="@dimen/margin4"
           />

   </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>